--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,10 @@ lerna-debug.log*
 *.launch
 .settings/
 *.sublime-workspace
+.history
 
 # IDE - VSCode
-.vscode/*
+.vscode
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
