--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "migration:generate": "npm run typeorm migration:generate src/data/postgres/migrations/$npm_config_name",
     "migration:create": "npm run typeorm migration:create src/data/postgres/migrations/$npm_config_name",
     "test": "jest --forceExit --maxWorkers=1 --detectOpenHandles",
-    "test:unit": "jest --coverage --forceExit --maxWorkers=1 --config ./test/jest-unit.json",
-    "test:integration": "jest --coverage --forceExit --maxWorkers=1 --config ./test/jest-integration.json",
-    "test:e2e": "jest --coverage --forceExit --maxWorkers=1 --config ./test/jest-e2e.json",
+    "test:unit": "jest --coverage --forceExit --maxWorkers=1 --config ./tests/jest.config.unit.ts",
+    "test:integration": "jest --coverage --forceExit --maxWorkers=1 --config ./tests/jest.config.integration.ts",
+    "test:e2e": "jest --coverage --forceExit --maxWorkers=1 --config ./tests/jest.config.e2e.ts",
     "test:verb": "jest --verbose --forceExit --maxWorkers=1 --detectOpenHandles",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage  --forceExit --maxWorkers=1 --detectOpenHandles",
@@ -86,28 +86,5 @@
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.1.0",
     "typescript": "4.6.2"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.*-spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node",
-    "globals": {
-      "ts-jest": {
-        "isolatedModules": true
-      }
-    },
-    "testTimeout": 20000
   }
 }
